# mkdocs-template-enterprise

./: .clinerules  .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.toml
.github/: CODEOWNERS
.github/scripts/: process_attachments.py
.github/workflows/: ci.yml  docs-attachments.yml  docs-build.yml  docs-sync.yml  process-attachments.yml  remote-deploy.yml  remote.yml
_codemaps/: mkdocs-template-enterprise_codemap.md
docs/: index.md
docs/assets/code/: api call phpipam.md
docs/guide/: annotations.md
docs/reference/: github-process-attachments-script.md
notes/: ci-notes.md  customer-documentation.md  fortigate-notes.md  notes-ci.md  notes-general.md  notes-privacy.md  notes-remote-deployment.md  notes.md  remote-deployment.md
scripts/: fortigate-github-policy.conf
